@startuml class_diagram

class "<<POD>>\nLinearControlBlock" as LinearControlBlock {
  + data: span<byte>
  + acquired_index: atomic_int
  + written_index: atomic_int
  + number_of_writers: atomic_int
}

class WaitFreeLinearWriter {
  + WaitFreeLinearWriter(control_block: LinearControlBlock&)
  + Acquire(length): optional<AcquiredData>
  + Release(AcquiredData): void
}

class LinearReader {
  + LinearReader(span<Byte>& data)
  + Read(): optional<span<Byte>>
}

class "<<POD>>\nAlternatingControlBlock" as AlternatingControlBlock {
  + linear_control_block_1: LinearControlBlock
  + linear_control_block_2: LinearControlBlock
}

class WaitFreeAlternatingWriter {
  + WaitFreeAlternatingWriter(control_block: AlternatingControlBlock&)
  + Acquire(length): optional<AcquiredData>
  + Release(AcquiredData): void
}

class AlternatingReader {
  + AlternatingReader(AlternatingControlBlock& data)
  + Read(): optional<span<Byte>>
  + Switch(): void
}

WaitFreeLinearWriter --> LinearControlBlock : "uses"
LinearReader --> LinearControlBlock : "uses"

AlternatingControlBlock *-- LinearControlBlock
WaitFreeAlternatingWriter *-- WaitFreeLinearWriter
AlternatingReader *-- LinearReader

WaitFreeAlternatingWriter --> AlternatingControlBlock : "uses"
AlternatingReader --> AlternatingControlBlock : "uses"

@enduml